<resources>
    <string name="app_name">HomeJob Link</string>
    <string name="tittle_homejob_link">HOMEJOB LINK</string>
    <string name="tittle_the_future_works_online">The future Works Online</string>
    <string name="hint_job_catgory">Job Catgory</string>
    <string name="hint_job_tittle">Job Tittle</string>
    <string name="hint_job_qualification">Job Qualification</string>
    <string name="hint_brief_description">Brief Description</string>
    <string name="hint_create_account">Create Account</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_create_account">Create Account</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
</resources>
