<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyt2"
    android:background="@android:color/holo_red_dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context="CreateAccountActivity">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/LoginMainTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:text="@string/tittle_homejob_link"
            android:textAlignment="center"
            android:textColor="@color/textColorBlack"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/loginSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/tittle_the_future_works_online"
            android:textAlignment="center"
            android:textColor="@color/textColorBlack"
            android:textSize="20sp" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/jobCategoryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/jobCategory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_job_catgory"
            android:textColor="@android:color/black"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/jobTittleLayout"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobCategoryLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/jobTittle"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_job_tittle" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/jobQualificationLayout"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobTittleLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/jobQualification"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_job_qualification"
            android:textColor="@android:color/white"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/jobDescriptionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobQualificationLayout"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/jobDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_brief_description"
            android:textColor="@android:color/black"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_rounded_corner"
        android:text="@string/hint_create_account"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobDescriptionLayout" />

</android.support.constraint.ConstraintLayout>