<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyt"
    android:background="@android:color/holo_red_dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/LoginMainTitle"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/tittle_homejob_link"
            android:textAlignment="center"
            android:textColor="@color/textColorBlack"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/loginSubTitle"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/tittle_the_future_works_online"
            android:textAlignment="center"
            android:textColor="@color/textColorBlack"
            android:textSize="20sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="378dp"
        android:layout_height="169dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/backgroundimg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.228"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_rounded_corner"
        android:text="@string/button_sign_in"
        android:textAllCaps="false"
        android:textColor="@color/textColorWhite"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonCreateAccount"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/buttonCreateAccount"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_rounded_corner"
        android:text="@string/button_create_account"
        android:textAllCaps="false"
        android:textColor="@color/textColorWhite"
        app:layout_constraintEnd_toStartOf="@+id/buttonSignIn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


</android.support.constraint.ConstraintLayout>